added stateOfTheProject, some more quick edits

--- a/templates/felixIndex.html
+++ b/templates/felixIndex.html
@@ -62,6 +62,9 @@
                    
                     console.log(brainFiles.files)
                     app.loadFiles(brainFiles.files);
+                    console.log("schwupps");
+                    app.getViewController().play();
+                    console.log("diwupps");
                 }
             }
         }
