[ADD]  second design, added icons & stuff

--- a/UI/src/components/meta-data/meta-data.html
+++ b/UI/src/components/meta-data/meta-data.html
@@ -1,8 +1,31 @@
-<div class="subtitle">Patient Information</div>
+<div class="component-header">
+    <div class="subtitle">Patient Information</div>
+    <img height="40" width="40" class="icon" src="../../assets/icon/info.png">
+</div>
 <div class="properties-wrap">
   <div class="elements">
-    <div class="text">Age: 34</div>
-    <div class="text">Sex: F</div>
-    <div class="text">Doctor treating: Miller</div>
-  </div>
+    <div>    
+      <div class="text">Name: </div> 
+      <div class="details">Felix Herron</div>
+    </div>
+    <div>    
+      <div class="text">ID: </div> 
+      <div class="details">#56833</div>
+    </div>
+    <div>    
+      <div class="text">Birth: </div> 
+      <div class="details">12.1.1978 (Age 34)</div>
+    </div>
+    <div>    
+      <div class="text">Sex: </div> 
+      <div class="details">Female</div>
+    </div>
+    <div>    
+      <div class="text">Doctor treating: </div> 
+      <div class="details">Czapmoney</div>
+    </div>
+    <div>    
+      <div class="text notes">Notes: </div> 
+      <div class="details notes">"Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo."</div>
+    </div>
 </div>
