--- a/UI/src/components/patient-output/patient-output.html
+++ b/UI/src/components/patient-output/patient-output.html
@@ -1,6 +1,9 @@
-<div class="subtitle">Patient critical Picture</div>
+<div class="component-header">
+    <div class="subtitle">CT Scan</div>
+    <img height="40" width="40" class="icon" src="../../assets/icon/brain.png">
+</div>
 <div class="properties-wrap">
-    <div class="elements">
-        <ion-img width="260" height="146" src="../assets/imgs/patient-brain.jpg"></ion-img>
+    <div class="elements brain">
+        <ion-img width="260" height="260" src="../assets/imgs/patient-brain.jpg"></ion-img>
     </div>
 </div>
