--- a/UI/src/pages/home/home.scss
+++ b/UI/src/pages/home/home.scss
@@ -2,36 +2,54 @@ page-home {
 
     ion-content {
         background-color: #C4DFE6 !important;
+        background-image: url(../../assets/imgs/background.jpg);
+        background-size: cover;
     }
 
     .wrapper {
         display: flex;
         height: 50%;
-        margin-top: 10%;
-        margin-bottom: 20%;
+        margin-top: 15%;
+        margin-bottom: 15%;
         width: 100%;
     }
 
     .elements {
         display: flex;
-        justify-content: center;
-        align-items: center;
+        // justify-content: center;
+        // align-items: center;
         flex-direction: column;
     }
 
+    .elements.brain {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
     .column {
-        background-color: #66A5AD;
-        border-radius: 35px;
+        background-color: rgb(204, 198, 198);
+        border-radius: 20px;
         padding: 15px;
         display: flex;
         flex-direction: column;
         margin: 30px;
-        -webkit-box-shadow:0 0 20px rgba(0,0,0,0.8);
-        -moz-box-shadow:0 0 20px rgba(0,0,0,0.8);
-        box-shadow:0 0 20px rgba(0,0,0,0.8);
+        -webkit-box-shadow:0 0 10px rgba(0,0,0,0.8);
+        -moz-box-shadow:0 0 10px rgba(0,0,0,0.8);
+        box-shadow:0 0 10px rgba(0,0,0,0.8);
+        border: 1px solid rgb(73, 142, 151);
+    }
+
+    .icon {
+        float: right;
+    }
+
+    .details {
+        float: right;
     }
 
     [name="title"] {
+        margin-top: 3%; 
         font-size: 8rem;
         background-color: #C4DFE6;
         border-radius: 35px;
@@ -44,6 +62,7 @@ page-home {
         z-index: -5;
         display: block;
         text-shadow: none;
+        float: left;
     }
 
     [name="input"] {
@@ -69,30 +88,45 @@ page-home {
 
     .subtitle {
         font-weight: bold;
-        font-size: 1.5em;
+        font-size: 2em;
+        float: left;
     }
 
     .properties-wrap {
-        margin-top: 25%;
     }
 
     input:focus,
-select:focus,
-textarea:focus,
-button:focus {
-    outline: none;
-}
+    select:focus,
+    textarea:focus,
+    button:focus {
+        outline: none;
+    }
+
+    .varian {
+        position: absolute;
+        bottom: 0;
+        right: 0;
+    }
+
+    .component-header {
+        padding-bottom: 5px;
+        margin-bottom: 15px;
+        border-bottom: 2px groove black;
+    }
 
 .upload-btn-wrapper {
     position: relative;
     overflow: hidden;
-    display: inline-block;
+    display: flex;
+    margin-top: 25%;
+    justify-content: center;
+    align-items: center;
   }
   
   .btn {
-    border: 2px solid #66A5AD;
-    color: #66A5AD;
-    background-color: #C4DFE6;
+    border: 2px solid lightgray;
+    color: rgb(170, 173, 173);
+    background-color: rgb(233, 230, 230);
     padding: 8px 20px;
     border-radius: 8px;
     font-size: 20px;
@@ -108,7 +142,25 @@ button:focus {
   }
    
   .text {
-      font-size: 1.2em;
+    font-size: 1.3em;
+    font-weight: 500;
+    float: left;
 
+    &.notes {
+        margin-top: 5px;
+    }
   }
+
+  .details {
+      font-size: 1.1em;
+
+      &.notes {
+          margin-top: 5px;
+      }
+  }
+
+  ion-img{
+      border-radius: 50%;
+  }
+
 }
