--- a/UI/src/theme/variables.scss
+++ b/UI/src/theme/variables.scss
@@ -91,6 +91,6 @@ $colors: (
 @import url('https://fonts.googleapis.com/css?family=Open+Sans');
 @import url('https://fonts.googleapis.com/css?family=Archivo');
 
-*{
- font-family: "Roboto", "Helvetica Neue", sans-serif !important;
-}
+// *{
+//  font-family: "Roboto", "Helvetica Neue", sans-serif !important;
+// }
