[CHG] changed output patient's template to variables

--- a/UI/src/components/meta-data/meta-data.html
+++ b/UI/src/components/meta-data/meta-data.html
@@ -6,26 +6,26 @@
   <div class="elements">
     <div>    
       <div class="text">Name: </div> 
-      <div class="details">Felix Herron</div>
+      <div class="details">{{name}}</div>
     </div>
     <div>    
       <div class="text">ID: </div> 
-      <div class="details">#56833</div>
+      <div class="details">#{{id}}</div>
     </div>
-    <div>    
+    <div>
       <div class="text">Birth: </div> 
-      <div class="details">12.1.1978 (Age 34)</div>
+      <div class="details">{{dateOfBirth}} (Age {{age}})</div>
     </div>
     <div>    
       <div class="text">Sex: </div> 
-      <div class="details">Female</div>
+      <div class="details">{{sex}}</div>
     </div>
     <div>    
       <div class="text">Doctor treating: </div> 
-      <div class="details">Czapmoney</div>
+      <div class="details">{{doctor}}</div>
     </div>
     <div>    
       <div class="text notes">Notes: </div> 
-      <div class="details notes">"Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo."</div>
+      <div class="details notes">{{notes}}</div>
     </div>
 </div>
