--- a/UI/src/components/patient-output/patient-output.html
+++ b/UI/src/components/patient-output/patient-output.html
@@ -12,8 +12,8 @@
         <!-- <ion-img width="260" height="260" src="../assets/imgs/patient-brain.jpg"></ion-img> -->
     </div>
 <div class="cancer-info">
-    <ion-icon name="checkmark-circle"> no cancer detected</ion-icon>
-    <ion-icon name="close-circle"> potential cancer detected</ion-icon>
+    <ion-icon *ngIf="!hasCancer" name="checkmark-circle"> no cancer detected</ion-icon>
+    <ion-icon *ngIf="hasCancer" name="close-circle"> potential cancer detected</ion-icon>
 </div>
     <!-- <img class="nocancer" height="40" width="40" src="../../assets/icon/nocancer.png">
     <img class="cancer" height="40" width="40" src="../../assets/icon/x.png"> -->
