[CHG] responsiveness for other screens

--- a/UI/src/components/patient-output/patient-output.html
+++ b/UI/src/components/patient-output/patient-output.html
@@ -1,5 +1,5 @@
 <div class="component-header">
-    <div class="subtitle">CT Scan</div>
+    <div class="subtitle">Diagnostic Image</div>
     <img height="40" width="40" class="icon" src="../../assets/icon/brain.png">
 </div>
 <div class="properties-wrap">
@@ -11,7 +11,7 @@
                 </div>
         <!-- <ion-img width="260" height="260" src="../assets/imgs/patient-brain.jpg"></ion-img> -->
     </div>
-<div class="cancer-info">
+<div class="cancer-info" *ngIf="showCancerInfo">
     <ion-icon *ngIf="!hasCancer" name="checkmark-circle"> no cancer detected</ion-icon>
     <ion-icon *ngIf="hasCancer" name="close-circle"> potential cancer detected</ion-icon>
 </div>
