--- a/UI/src/pages/home/home.scss
+++ b/UI/src/pages/home/home.scss
@@ -74,6 +74,10 @@ page-home {
         width: 15em;
     }
 
+    *{
+        overflow: hidden;
+    }
+
     [name="meta"] {
         float: left;
         width: 33.33%;
