--- a/UI/src/components/meta-data/meta-data.html
+++ b/UI/src/components/meta-data/meta-data.html
@@ -6,26 +6,30 @@
   <div class="elements">
     <div>    
       <div class="text">Name: </div> 
-      <div class="details">{{name}}</div>
+      <div class="details name"></div>
     </div>
     <div>    
       <div class="text">ID: </div> 
-      <div class="details">#{{id}}</div>
+      <div class="details id"></div>
     </div>
     <div>
       <div class="text">Birth: </div> 
-      <div class="details">{{dateOfBirth}} (Age {{age}})</div>
+      <div class="details dateOfBirth"></div>
     </div>
     <div>    
       <div class="text">Sex: </div> 
-      <div class="details">{{sex}}</div>
+      <div class="details sex"></div>
     </div>
     <div>    
-      <div class="text">Doctor treating: </div> 
-      <div class="details">{{doctor}}</div>
+      <div class="text">Image taken on: </div> 
+      <div class="details imageDate"></div>
+    </div>
+    <div>    
+      <div class="text">Institution: </div> 
+      <div class="details doctor"></div>
     </div>
     <div>    
       <div class="text notes">Notes: </div> 
-      <div class="details notes">{{notes}}</div>
+      <div class="details notes"></div>
     </div>
 </div>
