--- a/UI/src/pages/home/home.scss
+++ b/UI/src/pages/home/home.scss
@@ -2,7 +2,7 @@ page-home {
 
     ion-content {
         background-color: #C4DFE6 !important;
-        background-image: url(../../assets/imgs/background.jpg);
+        background-image: url(../../assets/imgs/background-blurred.jpg);
         background-size: cover;
     }
 
@@ -10,6 +10,36 @@ page-home {
         display: flex;
         height: 60%;
         margin-top: 15%;
+        margin-bottom: 0;
+        width: 100%;
+    }
+
+    #logo {
+        position: fixed;
+        height: 20%;
+        
+    }
+
+    #junction {
+        top: 8%;
+        position: fixed;
+        height: 12%;
+        right: 5px;
+
+    }
+
+    .logo-wrapper {
+        position: fixed;
+        height: 20%;
+        width: 100%;
+        z-index: 100;
+        background-color: rgba(211, 211, 211, 0.8); 
+    }
+
+    .wrapper-two {
+        display: flex;
+        height: 60%;
+        margin-top: 0;
         margin-bottom: 15%;
         width: 100%;
     }
@@ -26,8 +56,9 @@ page-home {
     }
 
     .column {
-        background-color: rgb(204, 198, 198);
-        border-radius: 20px;
+        opacity: 0.85;
+        background-color: rgb(210, 215, 218);
+        //border-radius: 20px;
         padding: 15px;
         display: flex;
         flex-direction: column;
@@ -35,7 +66,7 @@ page-home {
         -webkit-box-shadow:0 0 10px rgba(0,0,0,0.8);
         -moz-box-shadow:0 0 10px rgba(0,0,0,0.8);
         box-shadow:0 0 10px rgba(0,0,0,0.8);
-        border: 1px solid rgb(73, 142, 151);
+        border: 5px solid rgb(134, 97, 238);
     }
 
     .icon {
@@ -49,7 +80,7 @@ page-home {
     [name="title"] {
         margin-top: 3%; 
         font-size: 8rem;
-        background-color: #C4DFE6;
+        background-color: rgb(144, 187, 189);
         border-radius: 35px;
         padding: 15px;
         font-style: italic;
@@ -64,6 +95,19 @@ page-home {
     }
 
     [name="input"] {
+        float: left;
+        width: 33.33%;
+    }
+
+    [name="mr"] {
+        float: left;
+        width: 33.33%;
+    }
+    [name="ct"] {
+        float: left;
+        width: 33.33%;
+    }
+    [name="model"] {
         float: left;
         width: 33.33%;
     }
@@ -97,6 +141,7 @@ page-home {
         font-family: "Avant Garde", Avantgarde, "Century Gothic", CenturyGothic, "AppleGothic", sans-serif;;
     }
     .properties-wrap {
+        margin-top: 10%;
     }
 
     input:focus,
@@ -122,7 +167,7 @@ page-home {
     position: relative;
     overflow: hidden;
     display: flex;
-    margin-top: 30%;
+    margin-top: 20%;
     justify-content: center;
     align-items: center;
   }
@@ -166,8 +211,8 @@ page-home {
 }
 
   .btn {
-    border: 2px solid lightgray;
-    color: rgb(170, 173, 173);
+    border: 2px solid gray;
+    color: rgb(0, 0, 0);
     background-color: rgb(233, 230, 230);
     padding: 8px 20px;
     border-radius: 8px;
@@ -203,6 +248,6 @@ page-home {
 
   ion-img{
       border-radius: 50%;
-  }
 
+  }
 }
