[CHG] added correct video format, they should be on googlapis

--- a/UI/src/components/dimensional-model/dimensional-model.html
+++ b/UI/src/components/dimensional-model/dimensional-model.html
@@ -4,11 +4,7 @@
 </div>
 <div class="properties-wrap">
     <div class="elements brain">
-            <div id="dwv">
-                    <div class="layerContainer">
-                        <canvas class="imageLayer"></canvas>
-                    </div>
-                </div>
+        <div id="model-video-placeholder"></div>
         <!-- <ion-img width="260" height="260" src="../assets/imgs/patient-brain.jpg"></ion-img> -->
     </div>
 <div class="cancer-info" *ngIf="showCancerInfo">
