git support, other small features

--- a/UI/src/components/dimensional-model/dimensional-model.html
+++ b/UI/src/components/dimensional-model/dimensional-model.html
@@ -6,7 +6,8 @@
     <div class="elements brain">
             <div id="dwv">
                     <div class="layerContainer">
-                        <canvas class="imageLayer"></canvas>
+                        <!-- <canvas class="imageLayer"></canvas> -->
+                        <img id ="3dModelImage"/>
                     </div>
                 </div>
         <!-- <ion-img width="260" height="260" src="../assets/imgs/patient-brain.jpg"></ion-img> -->
