--- a/UI/src/components/patient-output/patient-output.html
+++ b/UI/src/components/patient-output/patient-output.html
@@ -2,7 +2,7 @@
     <div class="subtitle">Diagnostic Image</div>
     <img height="40" width="40" class="icon" src="../../assets/icon/brain.png">
 </div>
-<div class="properties-wrap">
+<div class="properties-wrap" style="margin-top:0;">
     <div class="elements brain">
             <div id="dwv">
                     <div class="layerContainer">
